--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
                         <ul class="list-unstyled list-inline header-social">
 
-                            <li> <a href="#"> <i class="fa fa-facebook"></i> </a> </li>
+                            <li> <a href="https://www.facebook.com/baybasiyouthinitiative/" target="_blank"> <i class="fa fa-facebook"></i> </a> </li>
                             <li> <a href="#"> <i class="fa fa-twitter"></i>  </a> </li>
                             <li> <a href="#"> <i class="fa fa-google"></i>  </a> </li>
                             <li> <a href="#"> <i class="fa fa-youtube"></i>  </a> </li>
@@ -82,7 +82,7 @@
 
                   </button>
                   
-                  <a class="navbar-brand" href="index.html"><img src="assets/images/b_logo.jpg" alt=""height="80" width="140"></a>
+                  <a class="navbar-brand" href="index.html"><img src="assets/images/b_logo.jpg" alt=""height="95" width="100"></a>
                   
                 </div>
 
@@ -182,8 +182,8 @@
 
                 <div class="carousel-caption">
 
-                  <h2 class="carousel-title bounceInDown animated slow" >A penny is a lot of money, if you have not got a penny.</h2>
-                  <h4 class="carousel-subtitle bounceInUp animated slow">You can make the diffrence !</h4>
+                  <h2 class="carousel-title bounceInDown animated slow" >A penny is a lot of money, if you don't have a penny.</h2>
+                  <h4 class="carousel-subtitle bounceInUp animated slow">You can make the difference!</h4>
                   <a href="#" class="btn btn-lg btn-secondary hidden-xs bounceInUp animated slow" data-toggle="modal" data-target="#donateModal">DONATE NOW</a>
 
                 </div> <!-- /.carousel-caption -->
@@ -240,7 +240,7 @@
                         <div class="col-icon-wrapper">
                           <img src="assets/images/icons/make-donation-icon.png" alt="">
                         </div>
-                        <h3 class="col-title">Make donations</h3>
+                        <h3 class="col-title">Donations</h3>
                         <div class="col-details">
 
                           <center>Support the Needy</center>
@@ -417,11 +417,13 @@
                             <div class="footer-content">
 
                                 <p>
-                                    <strong>Baybasi</strong> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
+                                  Baybasi, Inc. was incorporated in July 2008 as a non-profit charitable organization and is presently located in Foster City, California. The purpose of the corporation is to serve (without limitations), the Asian Indian community (people originating in the state of West Bengal, India and its neighboring states and countries speaking the language Bengali at home, and other Indian community members living in the Foster City, San Mateo, and the adjacent areas of the San Francisco Bay Area.
+
+
                                 </p> 
 
                                 <p>
-                                    ILorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
+                                  The BYI community is not just the Bengali population of the Bay Area, but all of the children, teens, adults, and seniors in need of a better world. Our vision is to help everyone, through a vast range of different projects, so that we can empower people to stand up and make a change in the world. 
                                 </p>
 
                             </div>
