--- a/about.html
+++ b/about.html
@@ -144,29 +144,25 @@
 
 				<div class="col-md-6">
 
-					<h2 class="title-style-2">ABOUT SADAKA <span class="title-under"></span></h2>
+					<h2 class="title-style-2">ABOUT BAYBASI AND BYI<span class="title-under"></span></h2>
 
 					<p>
-						This is a test line, nulla quae possimus id fugit totam perspiciatis ad consequatur natus dolores unde ipsa, architecto, dignissimos corrupti explicabo provident debitis suscipit, beatae!
+						Welcome to the Baybasi Youth Initiative about page. We started BYI because we dreamed of making a beneficial impact to our society.  "You must be the change you wish to see in the world". We can all come together to make that change in our world, and we are starting right here with our project Baybasi Youth Initiative so that we can see the world become a better place. Our generation has the ability and responsibility to build a better world for other children and future generations. We will be the generation that will live on to the future, and we can make the future a better place for us and others by starting to make a difference now.
+
+
 					</p>
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur, voluptatum molestiae voluptas ducimus tempora numquam eligendi quos, quia aut quidem et, odio deleniti amet natus accusamus fugit! Temporibus, tenetur.
+						Baybasi Youth Initiative (BYI) is committed in fulfilling the goals. BYI will organize fundraisers at different times of the year. We will organize various drives, build care packagaes, host events to raise funds, and reach out to kids in all parts of the world to participate in various projects.
+
+
 					</p>
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit.
+						BYI welcomes you to get involved in this worthy cause and help bring hope to people's lives. We will initiate and drive community events that will help us reach our goal. Many participants also get the chance to go to other organizations, and help in their work. In this way, we learn more about how to reach our goals of helping people of our world. Stay tuned for more to come! "Hope is the pillar that holds up the world. Hope is the dream of a waking man"
 					</p>
 
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi pariatur, voluptatum molestiae voluptas ducimus tempora numquam eligendi quos, quia aut quidem et, odio deleniti amet natus accusamus fugit! Temporibus, tenetur.
-					</p>
 
-					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse voluptatem, ea, quisquam vero ullam nesciunt recusandae expedita similique nisi! Ducimus, reiciendis, quia. Explicabo minima error excepturi minus, aperiam illum fugit , quia. Explicabo minima error excepturi minus, aperiam illum fugit.
-
-					</p>
-					
 				</div>
 
 			</div> <!-- /.row -->
@@ -586,11 +582,11 @@
 
                             <div class="footer-content">
                                 <p>
-                                    <strong>Sadaka</strong> ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
+                                    Baybasi, Inc. was incorporated in July 2008 as a non-profit charitable organization and is presently located in Foster City, California. The purpose of the corporation is to serve (without limitations), the Asian Indian community (people originating in the state of West Bengal, India and its neighboring states and countries speaking the language Bengali at home, and other Indian community members living in the Foster City, San Mateo, and the adjacent areas of the San Francisco Bay Area.
                                 </p> 
 
                                 <p>
-                                    ILorem ipsum dolor sit amet, consectetur adipiscing elit. Ut at eros rutrum turpis viverra elementum semper quis ex. Donec lorem nulla, aliquam quis neque vel, maximus lacinia urna.
+                                    The BYI community is not just the Bengali population of the Bay Area, but all of the children, teens, adults, and seniors in need of a better world. Our vision is to help everyone, through a vast range of different projects, so that we can empower people to stand up and make a change in the world. 
                                 </p>
 
                             </div>
