--- a/causes.html
+++ b/causes.html
@@ -55,10 +55,10 @@
 
                         <ul class="list-unstyled list-inline header-social">
 
-                            <li> <a href="#" target="_blank"> <i class="fa fa-facebook"></i> </a> </li>
+                            <li> <a href="https://www.facebook.com/baybasiyouthinitiative/" target="_blank"> <i class="fa fa-facebook"></i> </a> </li>
+                            <li> <a href="https://www.youtube.com/channel/UC5nE-vdt6_K0V94pqG2H5Qg" target="_blank"> <i class="fa fa-youtube"></i>  </a> </li>
                             <li> <a href="#" target="_blank"> <i class="fa fa-twitter"></i>  </a> </li>
                             <li> <a href="#" target="_blank"> <i class="fa fa-google"></i>  </a> </li>
-                            <li> <a href="#" target="_blank"> <i class="fa fa-youtube"></i>  </a> </li>
                             <li> <a href="#" target="_blank"> <i class="fa fa fa-pinterest-p"></i>  </a> </li>
 
                        </ul> <!-- /.header-social  -->
@@ -85,7 +85,7 @@
 
                   </button>
                   
-                  <a class="navbar-brand" href="index.html"><img src="assets/images/b_logo.jpg" alt=""height="95" width="100"></a>
+                  <a class="navbar-brand responsive" href="index.html"><img src="assets/images/b_logo.png" alt=""height="95" width="100"></a>
                   
                 </div>
 
