--- a/causes-single.html
+++ b/causes-single.html
@@ -57,9 +57,9 @@
 
                             <li> <a href="https://www.facebook.com/baybasiyouthinitiative/" target="_blank"> <i class="fa fa-facebook"></i> </a> </li>
 							<li> <a href="https://www.youtube.com/channel/UC5nE-vdt6_K0V94pqG2H5Qg" target="_blank"> <i class="fa fa-youtube"></i>  </a> </li>
-							<li> <a href="#" target="_blank"> <i class="fa fa-twitter"></i>  </a> </li>
+							<!--<li> <a href="#" target="_blank"> <i class="fa fa-twitter"></i>  </a> </li>
                             <li> <a href="#" target="_blank"> <i class="fa fa-google"></i>  </a> </li>
-                            <li> <a href="#" target="_blank"> <i class="fa fa fa-pinterest-p"></i>  </a> </li>
+                            <li> <a href="#" target="_blank"> <i class="fa fa fa-pinterest-p"></i>  </a> </li>-->
 
                        </ul> <!-- /.header-social  -->
                       
