--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
         
         <!-- Modernizr -->
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
+		<link rel="icon" href="favicon.ico">
 
 
     </head>
