--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         
         <!-- Modernizr -->
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
+        <link rel="icon" href="favicon.ico">
 
 
     </head>
