--- a/causes.html
+++ b/causes.html
@@ -86,11 +86,11 @@
 
                   </button>
                   
-                  <a class="navbar-brand responsive" href="index.html"><img src="assets/images/b_logo.png" alt=""height="95" width="100"></a>
+                  <a class="navbar-brand responsive move300" href="index.html"><img src="assets/images/b_logo.png" alt=""></a>
                   
                 </div>
 
-                <div id="navbar" class="navbar-collapse collapse pull-right">
+                <div id="navbar" class="navbar-collapse collapse pull-right move330">
 
                   <ul class="nav navbar-nav">
 
