--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
                         <ul class="list-unstyled list-inline header-contact">
                             <!--<li> <i class="fa fa-phone"></i> <a href="tel:">+212 658 986 213 </a> </li>-->
-                             <li> <i class="fa fa-envelope"></i> <a href="mailto:baybasiyouthinitiative@gmail.com">website@gmail.com</a> </li>
+                             <li> <i class="fa fa-envelope"></i> <a href="mailto:baybasiyouthinitiative@gmail.com">baybasiyouthinitiative@gmail.com</a> </li>
                        </ul> <!-- /.header-contact  -->
                       
                     </div>
