--- a/index.html
+++ b/index.html
@@ -216,20 +216,9 @@
     -->
 
 <br class=big>
-<br class=big>
-<br class=big>
-<br class=big>
 
-<div style="
-background-color:#85a092;
-color:white;
-padding:20px;
-border: 10px solid #e0ebde;
-text-align: center;
-padding-top: 60px;
-padding-right: 150px;
-padding-bottom: 50px;
-padding-left: 150px;">
+
+<div class="firstboxhome">
 
 <h1>Ready to make the world a better place</h1>
 <p>Welcome to the Baybasi Youth Initiative home page. We started BYI because we dreamed of 
@@ -243,16 +232,8 @@ padding-left: 150px;">
 </p>
 
 </div> 
-<div style="
-background-color:#61766f;
-color:white;
-padding:20px;
-border: 10px solid #e0ebde;
-text-align: center;
-padding-top: 50px;
-padding-right: 150px;
-padding-bottom: 50px;
-padding-left: 150px;">
+
+<div class="secondboxhome">
 
 
   <h1>BYI - Who We Are</h1>
@@ -418,7 +399,7 @@ padding-left: 150px;">
                   <div class="reasons-titles">
 
                       <h3 class="reasons-title">Visit our Project Page</h3>
-                      <h5 class="reason-subtitle">Come an join us</h5>
+                      <h5 class="reason-subtitle">Come and join us</h5>
                       
                   </div>
 
