--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
                   <li> <img src="assets/images/sponsors/sponsor 1.png"  style="position:relative; right: -100px;" alt=""></li>
                   <li> <img src="assets/images/sponsors/razia sponsor.png" style="position:relative; right: -100px; top: 20px;" alt=""></li>
                   <li> <img src="assets/images/sponsors/kids against hunger.png" style="position:relative; right: -100px; top: 37px;" alt=""></li>
-                  <li> <img src="assets/images/sponsors/pan.png"  style = "position:relative; right: -100px; top: 50px;" alt=""</li>
-                  <li> <img src="assets/images/sponsors/sankara sponsor.png" style = "position:relative; right: -100px;top: 77px;" alt=""></li> 
+                  <li> <img src="assets/images/sponsors/pan.png"  style = "position:relative; right: -100px; top: 50px;" alt=""> </li>
+                  <li> <img src="assets/images/sponsors/sankara sponsor.png" style = "position:relative; right: -100px; top: 77px;" alt=""></li> 
                   <li> <img src="assets/images/sponsors/children fund.png" style = "position:relative; right: -100px; top: 65px;" alt=""></li>
 
                   <!--<li> <img src="assets/images/sponsors/wikimedia.png" alt=""></li>
