--- a/about.html
+++ b/about.html
@@ -297,7 +297,7 @@
 
 	                        <div class="thumnail">
 
-	                            <img src="assets/images/team/member-4.jpg" alt="" class="cause-img">
+	                            <img src="assets/images/team/website picture adri.png" alt="" class="cause-img">
 	                            
 	                        </div>
 
