--- a/gallery.html
+++ b/gallery.html
@@ -25,7 +25,8 @@
         
         <!-- Modernizr -->
         <script src="assets/js/modernizr-2.6.2.min.js"></script>
-		<link rel="icon" href="favicon.ico">
+        <script src="assets/js/test.js"></script>
+        <link rel="icon" href="favicon.ico">
 
 
     </head>
@@ -332,15 +333,15 @@
                                     <form action="php/mail.php" class="ajax-form">
 
                                         <div class="form-group">
-                                            <input type="text" name="name" class="form-control" placeholder="Name" required>
+                                            <input type="text" name="name" class="form-control" placeholder="Name*" required>
                                         </div>
 
                                          <div class="form-group">
-                                            <input type="email" name="email" class="form-control" placeholder="E-mail" required>
+                                            <input type="text" name="subject" id="contactSubject" class="form-control" placeholder="Subject*" required>
                                         </div>
 
                                         <div class="form-group">
-                                            <textarea name="message" class="form-control" placeholder="Message" required></textarea>
+                                            <textarea name="message" id="contactMessage" class="form-control" placeholder="Message*" required></textarea>
                                         </div>
 
                                         <div class="form-group alerts">
@@ -356,7 +357,7 @@
                                         </div>
 
                                          <div class="form-group">
-                                            <button type="submit" class="btn btn-submit pull-right">Send message</button>
+                                            <button type="submit" onclick="javascript:window.location='mailto:'+toemail+'?subject='+subject.value+'&cc='+cc+'&body='+message.value" class="btn btn-primary pull-right">Send message</button>
                                         </div>
                                         
                                     </form>
