--- a/about.html
+++ b/about.html
@@ -298,13 +298,13 @@
 
 	                        <div class="thumnail">
 
-	                            <img src="../../../Users/Adri/Downloads/resized.png" alt="" class="cause-img">
+	                            <img src="assets/images/team/resized.png" alt="" class="cause-img">
 	                            
 	                        </div>
 
 
 
-	                        <h4 class="member-name"><a href="#">Allison J. Falls</a></h4>
+	                        <h4 class="member-name"><a href="#">Adri M.</a></h4>
 
 	                        <div class="member-position">
 	                            CO-FOUNDER
