--- a/about.html
+++ b/about.html
@@ -208,7 +208,6 @@
 
 
 				</div>
-				<br>
 				<div>
 
 					<img src="assets/images/about-us.png" alt=""  class="responsive">
@@ -468,7 +467,7 @@
 
 				<div class="row">
 	                <div class="col-md-3 col-sm-6">
-	                    <div class="team-member">
+	                    <div class="team-member textalign">
 
 	                        <div class="thumnail">
 
@@ -492,7 +491,7 @@
 	                    
 					</div>
 	            		<div  class="col-md-3 col-sm-6">
-	                    	<div class="team-member">
+	                    	<div class="team-member textalign">
 
 	                        	<div class="thumnail">
 
