--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   
                 </div>
 
-                <div id="navbar" class="navbar-collapse collapse pull-right move330">
+                <div id="navbar" class="navbar-collapse collapse pull-right textalign">
 
                   <ul class="nav navbar-nav">
 
