--- a/index.html
+++ b/index.html
@@ -213,12 +213,18 @@
       </a>
 
 </div><!-- /.carousel -->
+<!--<button onclick="appear()" id="vidbutton" >Click Me!</button>
 
-    <!-- Rajib New adding
+<center>
+<iframe id="video1"width="560" height="315" src="https://www.youtube.com/embed/7JGcQLgV5Gw" title="YouTube video player" frameborder="0" style="position: relative; text-align: center; display: none;"allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>-->
+
+<!-- Rajib New adding
         
     -->
 
 <br class=big>
+
 <!--<button onclick="revealMessage()">Click me!
   <p id="hiddenMessage" style="display:none">You are going on a cruise</p> -->
 
