--- a/causes.html
+++ b/causes.html
@@ -210,7 +210,7 @@
 		                        </div>
 		                        <h4 class="cause-title"><a href="#">PRATYUSH CDCW</a></h4>
 		                        <div class="cause-details">
-
+                              Pratyush CDCW(Complete Development of Children and Women is a social organization with the goal of giving the right opportunity to many children that have the potential to develop into a better human being that they couldn't become under their poor living conditions. They therefore put all the efforts to pass on the necessary components required to create a better future for them.
 
 		                        </div>
 
