--- a/causes.html
+++ b/causes.html
@@ -332,9 +332,12 @@ BYI was able to donate $650 to Marin Safe to support the victims of
                   
                   <h4 class="cause-title"><a href="#">RAZIA'S RAY OF HOPE</a></h4>
                   <div class="cause-details">
-                    BYI is a sponsor of Razia's Ray of Hope. Our donations were able to fund a year of schooling for two students
-                    at Zabuli's Education Center. It covered the cost of their teacher's salary as well as materials that are essential to their education 
-                    such as school supplies, shoes, books, backpacks, winter clothing, school uniforms, and more.
+                    <!--ALIGNMENT IS OK ON GITHUB-->
+                    BYI is a sponsor of Razia's Ray of Hope. Our donations were able to fund a year of 
+                    schooling for two students at Zabuli's Education Center. 
+                    It covered the cost of their teacher's salary as well as 
+                    materials that are essential to their education such as school supplies, books, backpacks, clothing, and more.
+
                   </div>
                   
                   <div class="btn-holder text-center">
