--- a/causes.html
+++ b/causes.html
@@ -189,8 +189,8 @@
                   <h4 class="cause-title"><a href="causes-single-1.html">SCHOOL SUPPLIES DRIVE</a></h4>
                   <div class="cause-details">
                     BYI participated in the 2016 Backpack and School Supply Drive organized by Children's Fund 
-                    to help low-income and foster youth in San Mateo County to help them have everything they need to succeed in school this year. 
-                    A volunteer who helps distribute backpacks filled with school supplies stated that these 
+                    to help low-income and foster youth in San Mateo County to make sure have everything they need to succeed in school this year. 
+                    A volunteer who helps distribute the items stated that these 
                     contributions “made a big impact on their lives and were a huge motivation for them to start school.”
 
 
