--- a/causes.html
+++ b/causes.html
@@ -190,7 +190,7 @@
                   <div class="cause-details">
                     BYI participated in the 2016 Backpack and School Supply Drive organized by Children's Fund 
                     to help low-income and foster youth in San Mateo County to make sure have everything they need to succeed in school this year. 
-                    A volunteer who helps distribute backpacks filled with school supplies stated that these 
+                    A volunteer who helps distribute backpacks and school supplies stated that these 
                     contributions “made a big impact on their lives and were a huge motivation for them to start school.”
 
 
