--- a/projects.html
+++ b/projects.html
@@ -95,7 +95,7 @@
                 
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="about.html">ABOUT</a></li>
-                <li class="has-child"><a class="is-active" href="causes.html">PROJECTS</a>
+                <li><a class="is-active" href="projects.html">PROJECTS</a></li>
                   
                   <li><a href="gallery.html">GALLERY</a></li>
                   <li><a href="contact.html">CONTACT</a></li>
