--- a/projects.html
+++ b/projects.html
@@ -365,7 +365,7 @@ BYI was able to donate $650 to Marin Safe to support the victims of
                     </div>
                   </div-->
                   
-                  <h4 class="cause-title"><a href="#">AMPHAN CYCLONE FUND</a></h4>
+                  <h4 class="cause-title"><a href="#">AMPHAN CYCLONE</a></h4>
                   <div class="cause-details">
                     In Hingalganj, houses are completely destroyed because of a cyclone. The people are living in an accommodation provided by the government.
                      They will not be able to do any agricultural activities for the next 3 years.
