--- a/project_schoolsupplies.html
+++ b/project_schoolsupplies.html
@@ -121,7 +121,7 @@
 
 		<div class="container zoomIn animated">
 			
-			<h1 class="page-title">CAUSE TITLE <span class="title-under"></span></h1>
+			<h1 class="page-title">Backpack & School Supply Drive<span class="title-under"></span></h1>
 			<p class="page-description">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
 			</p>
