--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 
         <meta charset="utf-8">
-        <title>Baybasi Youth Initiative</title>
+        <title>BYI Home Page</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- Fonts -->
@@ -226,8 +226,7 @@
 
 <h1>Ready to make the world a better place</h1>
 <p>Welcome to the Baybasi Youth Initiative home page. We started BYI because we dreamed of 
-  making a beneficial impact to our society.  "You must be the change you wish to see in the 
-  world." We can all come together to make that change in our world, and we are starting right 
+  making a beneficial impact to our society. We can all come together to make that change in our world, and we are starting right 
   here with our project, Baybasi Youth Initiative, so that we can see the world become a better 
   place. Our generation has the ability and responsibility to build a better world for other 
   children and future generations. We will be the generation that will live on to the future, 
