--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
                       
                           <h4>A glimpse of our projects:</h4> <br>
                           <p> Children’s Fund San Mateo </p>
-                          <p> Covid - Give2Asiae </p>
+                          <p> Covid - Give2Asia </p>
                           <p> Supporting homeless people in Berkeley (2020) </p>
                           <p> Doctor’s without Borders (Multiple times) </p>
                           <p> Razia’s Ray Of Hope (Zabuli Education Center) </p>
