Finished all projects

--- a/project_ardsi.html
+++ b/project_ardsi.html
@@ -123,7 +123,8 @@
 			
 			<h1 class="page-title">ARDSI - Kolkata <span class="title-under"></span></h1>
 			<p class="page-description">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit Necessitatibus.
+				Alzheimer's and Related Disorders Society of India ARDSI - Kolkata Chapter
+
 			</p>
 			
 		</div>
@@ -139,12 +140,12 @@
 				<div class="col-md-12 fadeIn animated">
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+						<center>The donation will specifically go towards:<br>
+
+Supporting the trained caregiver's time and expertise to counsel family members <br>
+in areas of caregiving for their loved ones and themselves. <br>
+
+Supporting the activity items like radio, coloring pencils, and books.<br></center>
 					</p>
 
 				</div>
@@ -189,40 +190,57 @@
 			</div>
 			
 			<div class="center4">
-				<h2 class="title-style-reason"> Details <span class="title-under"></span></h2>
+				<h2 class="title-style-reason"> How can you help? <span class="title-under"></span></h2>
 	
 			</div>
 			<div class="row fadeIn animated">
 
 				<div class="col-md-6">
 
-					<h2 class="title-style-2"> Cause sub title <span class="title-under"></span></h2>
+					<h2 class="title-style-2"> Volunteer <span class="title-under"></span></h2>
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            ARDSI offers a training program for those who are willing to learn the skills of caring for dementia patients.
+            Training for care workers, nursing staff, medical professionals and general public was available since its inception.
+            Click <a href="https://ardsi.org/training/" target="_blank"><u><b>here</b></u></a> for more information about volunteering.
+
 					</p>
 
 				</div>
 
 				<div class="col-md-6">
 
-					<h2 class="title-style-2"> Cause sub title <span class="title-under"></span></h2>
+					<h2 class="title-style-2"> Fundraise <span class="title-under"></span></h2>
 
 					<p>
-						Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Raise money for ARDSI's: Day care facilities for persons with dementia, respite care services, 
+            residential care facilities, counseling and guidance for family care givers, home care services, 
+            and memory clinics.<br>
+            Click <a href="https://ardsi.org/donate-2/" target="_blank"><u><b>here</b></u></a> for donation info to ARDSI.
+
 					</p>
 
 				</div>
+
+
+
+        <div class="row">
+          <br>
+          <div class="center4">
+
+            <h2 class="title-style-reason"> Develop Technological Solutions <span class="title-under"></span></h2>
+            <p class="text-align" style="font-size: 15px;">
+
+              1. Design low-tech objects that are easy to use for dementia patients.<br><br>
+
+              2. Create apps and programs to spread awareness and provide support​<br><br>
+
+              3. Create solutions that help locate someone who has wandered, and alert caregivers if someone is getting up from bed, or trying to open a door, etc.​
+            </p>
+          </div>
+
+      
+        </div>
 
 			</div>
 
