--- a/project_amphan.html
+++ b/project_amphan.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>Single cause | Charity / Non-profit responsive Bootstrap HTML5 template</title>
+        <title>Amphan Cyclone Fund</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -123,7 +123,10 @@
 			
 			<h1 class="page-title">Amphan Cyclone Fund<span class="title-under"></span></h1>
 			<p class="page-description">
-				June 2020
+        In Hingalganj, houses are completely destroyed. The people are displaced and 
+        living in an accommodation provided by the government. In addition, the 
+        saline water flooding is causing various skin diseases for people. To help, BYI 
+        is helping villagers buy medicines.
 			</p>
 			
 		</div>
@@ -139,11 +142,11 @@
 				<div class="col-md-12 fadeIn animated">
 
 					<p>
-						In Hingalganj, houses are completely destroyed. The people are displaced and 
-                        living in an accommodation provided by the government. They will not be able to 
-                        do any agricultural activities for the next 3 years. In addition, the large scale 
-                        saline water flooding is causing various skin diseases for people. To help, BYI 
-                        is helping villagers buy medicines.
+
+
+                        The AIM Foundation is a starting community kitchen at Molla para village of Kultali, Nagenabad, Sunderban. The West Bengal Forest Department has kindly consented to provide infrastructural support. They have a weekly medical camp with free medication at Kantamari, Shyamnagar, Raidighi Range, Sundarban. They provide other relief items like Chire, Muri, Gur, Milk Powder, Chattu, Old clothes etc. 
+
+
 					</p>
 
 				</div>
