changing using the revisions

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html class="no-js">
     <head>
         <meta charset="utf-8">
-        <title>About us</title>
+        <title>About Us</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -113,7 +113,7 @@
 			
 			<h1 class="page-title">ABOUT US <span class="title-under"></span></h1>
 			<p class="page-description">
-				Baybasi Youth Initiative.
+				Baybasi Youth Initiative
 			</p>
 			
 		</div>
@@ -134,29 +134,31 @@
 
 				<div class="col-md-6">
 
-					<h2 class="title-style-2">ABOUT BAYBASI AND BYI<span class="title-under"></span></h2>
+					<h2 class="title-style-2">ABOUT Baybasi Youth Initiative<span class="title-under"></span></h2>
 
 					<p>
                     Welcome to Baybasi Youth Initiative. We started BYI because we dreamed of making a beneficial impact to our society.
-                    "You must be the change you wish to see in the world." We can all come together to make that change in our world, and we are starting right here with our project,
-                    Baybasi Youth Initiative, so that we can see the world become a better place.
-                    Our generation has the ability and responsibility to build a better world for children and future generations and we can start by making a difference now.
+                    "You must be the change you wish to see in the world." We are coming together to make that change in our world, 
+					and we are starting right here with our project, Baybasi Youth Initiative, so that we can see the world become a better place.
+                    Our generation has the ability and responsibility to build a better world for children and future generations and we can 
+					start by making a difference now.
 
 
 					</p>
 
 					<p>
-                    Baybasi Youth Initiative (BYI) is committed to fulfilling these goals. We will organize fundraisers at different times of the year.
-                    We will organize various drives, build care packagaes, host events to raise funds, and reach out to kids in all parts of the world to participate in various projects.
+                    Baybasi Youth Initiative (BYI) is committed to fulfilling these goals: Organize fundraisers and various drives at different times 
+					of the year, build care packagaes, host events to raise funds, and reach out to kids in all parts of the world to participate in 
+					various projects.
 
 
 					</p>
 
 					<p>
-                    BYI welcomes you to get involved in this worthy cause and help bring hope to people's lives. We will initiate and drive community events
-                    that will help us reach our goal. Many participants also get the chance to go to other organizations, and help in their work.
-                    In this way, we learn more about how to reach our goals of helping people of our world. Stay tuned for more to come! "Hope is the pillar that holds up the world.
-                    Hope is the dream of a waking man."
+                    BYI welcomes you to get involved in this worthy cause and help bring hope to people's lives. 
+					We initiate and drive community events that will help us reach our goal. Many participants also get the chance to go to other 
+					organizations, and help in their work. In this way, we learn more about how to reach our goals of helping people of our world. 
+					Stay tuned for more to come! "Hope is the pillar that holds up the world. Hope is the dream of a waking man."
 					</p>
 
 
@@ -490,7 +492,7 @@
                 <br>
 
                 <br class=big>
-	            <h2 class="title-style-1">Our Ex-Members<span class="title-under"></span></h2>
+	            <h2 class="title-style-1">Alumni<span class="title-under"></span></h2>
 
                 <div class="row">
 
