--- a/project_amphan.html
+++ b/project_amphan.html
@@ -126,7 +126,7 @@
         In Hingalganj, houses are completely destroyed. The people are displaced and 
         living in an accommodation provided by the government. In addition, the 
         saline water flooding is causing various skin diseases for people. To help, BYI 
-        is helping villagers buy medicines.
+        is helping villagers buy medicine among other things.
 			</p>
 			
 		</div>
@@ -144,8 +144,10 @@
 					<p>
 
 
-                        The AIM Foundation is a starting community kitchen at Molla para village of Kultali, Nagenabad, Sunderban. The West Bengal Forest Department has kindly consented to provide infrastructural support. They have a weekly medical camp with free medication at Kantamari, Shyamnagar, Raidighi Range, Sundarban. They provide other relief items like Chire, Muri, Gur, Milk Powder, Chattu, Old clothes etc. 
-
+                        <center>BYI donated to "Pratyush CDCW, Mrinal-Hingalganj, Sundarbans AIM Foundation, Abasar Ramakrishna Pally Abasik Sammilanee, Sundarbans
+                        Institute for Indian mothers and children, Debipur Pragati, Sundarbans Pompy Sen/New Town Forum News, and Covid Relief.</center>
+                        
+                      
 
 					</p>
 
@@ -183,55 +185,57 @@
 
 			</div>
 
-			<div class="row fadeIn animated">
+        <center><div class="row fadeIn animated">
 
-				<div class="col-md-6">
+          <div class="col-md-6">
 
-					<h2 class="title-style-2"> Action for Amphan Fundraiser <span class="title-under"></span></h2>
+              <h2 class="title-style-2amp"> Action for Amphan Fundraiser <span class="title-under"></span></h2>
 
-					<p>
-						Action for Amphan was first streamed on Youtube and Facebook on 
-						June 27th, 2020 at 6pm PST and once again on June 28th, 2020 
-						. This program was a huge success as BYI was able to raise over 
-						$5,000 in funds. The members of BYI showcased their talents in the
-						livestream performance, and were also joined by the students at 
-						Pathshala. 
-					</p>
-					<p>
-						Click <a href="https://www.youtube.com/watch?v=v1QU1pABNOg" target="_blank"><u><b>here</a></b></u> to watch the livestream.
-					</p>
+              <p>
+                Action for Amphan was first streamed on Youtube and Facebook on 
+                June 27th, 2020 at 6pm PST and once again on June 28th, 2020 
+                . This program was a huge success as BYI was able to raise over 
+                $5,000 in funds. The members of BYI showcased their talents in the
+                livestream performance, and were also joined by the students at 
+                Pathshala. 
+              </p>
+              <p>
+                Click <a href="https://www.youtube.com/watch?v=v1QU1pABNOg" target="_blank"><u><b>here</a></b></u> to watch the livestream.
+              </p>
 
-				</div>
+          </div>
 
-				<div class="col-md-6">
+            <div class="col-md-6">
 
-					<h2 class="title-style-2"> Participants <span class="title-under"></span></h2>
+              <h2 class="title-style-2amp"> Participants <span class="title-under"></span></h2>
 
-					<p style="display: inline-block">
-					  Anoushka Banerjee </br>
-						Ishika Banerjee </br>
-						Ishani Basak </br>
-						Sudiksha Bhaduri </br>
-						Srija Bhattacharya </br>
-						Deeya Chakrabarti </br>
-						Sreeya Chakrabarti </br>
-            Chiroshree Das </br>
-          </p>
-          <p style="display: inline-block">
+              <p style="display: inline-block">
+                Anoushka Banerjee </br>
+                Ishika Banerjee </br>
+                Ishani Basak </br>
+                Sudiksha Bhaduri </br>
+                Srija Bhattacharya </br>
+                Deeya Chakrabarti </br>
+                Sreeya Chakrabarti </br>
+                Chiroshree Das </br>
+              </p>
+              <p style="display: inline-block">
 
-						Urjaswee Debnath </br>
-						Wreetom Dutta </br>
-						Doetri Ghosh </br>
-						Snehan Ghosh </br>
-						Oishee Maharatna </br>
-						Mir Majumdar </br>
-						Arushi Roy </br>
-						Rishika Sahu
-          </p>
+                Urjaswee Debnath </br>
+                Wreetom Dutta </br>
+                Doetri Ghosh </br>
+                Snehan Ghosh </br>
+                Oishee Maharatna </br>
+                Mir Majumdar </br>
+                Arushi Roy </br>
+                Rishika Sahu
+              </p>
 
-				</div>
+            </div>
 
-			</div>
+        </div></center>
+
+
 			
 		</div>	
 
