--- a/projects.html
+++ b/projects.html
@@ -219,7 +219,10 @@
                   </div-->
                   <h4 class="cause-title">Prerana Audio Library | 2022</h4>
                   <div class="cause-details">
-                    Prerana Audio Library is 
+                    Pratyush CDCW(Complete Development of Children and Women) 
+                    primarily deals with the economic, educational, social, health, and hygienic welfare of poor children and their parents.
+                    In July of 2018, BYI volunteers distributed supplies to Pratyush in Kolkata.                    
+                    
                     
                     <!--with the goal of giving the right opportunity to many children that have the potential to develop into 
                     better human beings which they couldn't achieve under their poor living conditions. 
