--- a/project_amphan.html
+++ b/project_amphan.html
@@ -194,8 +194,7 @@
               <p>
                 Action for Amphan was first streamed on Youtube and Facebook on 
                 June 27th, 2020 at 6pm PST and once again on June 28th, 2020 
-                . This program was a huge success as BYI was able to raise over 
-                $5,000 in funds. The members of BYI showcased their talents in the
+                . This program was a huge success as BYI was able to raise a lot of funds. The members of BYI showcased their talents in the
                 livestream performance, and were also joined by the students at 
                 Pathshala. 
               </p>
