--- a/project_caliwildfire.html
+++ b/project_caliwildfire.html
@@ -184,7 +184,7 @@
 					  <h2 class="title-style-reason"> Donations <span class="title-under"></span></h2>
 					  <p class="text-align" style="font-size: 15px;">
 		  
-						BYI was able to donate $650 to Marin Safe to support the victims of the Marin Wildfire, as well as all the other wildfires going on in California.
+						BYI was able to donate to Marin Safe to support the victims of the Marin Wildfire, as well as all the other wildfires going on in California.
 
 
 					  </p>
